--- a/Color Scheme Generator/styles.css
+++ b/Color Scheme Generator/styles.css
@@ -75,6 +75,7 @@ body {
     display: flex;
     flex-direction: column;
     align-content: center;
+    min-height: 800px;
   }
   .color-col {
     display: flex;
